[tool.poetry]
name = "nyt-bee-solver"
version = "0.1.0"
description = ""
authors = ["Greg Diamond <gdiamond@nextdoor.com>"]
readme = "README.md"
packages = [{include = "nyt_bee_solver"}]

[tool.poetry.dependencies]
python = "^3.10"
colorama = '^0.4.6'
termcolor = '^2.2.0'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
solve = 'nyt_bee_solver.main:main'